GiRaFFEfood_NRPy: Fixed some formatting and documentation caught by Mew-Bing.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_1D_tests-fast_wave.ipynb
@@ -80,7 +80,7 @@
     "# Step 1: Import core NRPy+ modules and set NRPy+ parameters \\[Back to [top](#toc)\\]\n",
     "$$\\label{initializenrpy}$$\n",
     "\n",
-    "Here, we will import the NRPy+ core modules and set the reference metric to Cartesian, set commonly used NRPy+ parameters, and set C parameters that will be set from outside the code eventually generated from these expressions. We will also set up a parameter to determine what initial data is set up, although it won't do much yet."
+    "Here, we will import the NRPy+ core modules, set the reference metric to Cartesian, and set commonly used NRPy+ parameters. We will also set up a parameter to determine what initial data is set up, although it won't do much yet."
    ]
   },
   {
