cmdline_helper & tutorial: Re-enable pdflatex on Windows & Mac

--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing cmdline_helper-validation.py\n"
+      "Overwriting cmdline_helper-validation.py\n"
      ]
     }
    ],
@@ -458,19 +458,16 @@
     "%%writefile -a cmdline_helper-validation.py\n",
     "\n",
     "def output_Jupyter_notebook_to_LaTeXed_PDF(notebookname,location_of_template_file=os.path.join(\".\"),verbose=True):\n",
-    "    if sys.platform in ('linux', 'linux32'):\n",
-    "        Execute_input_string(r\"jupyter nbconvert --to latex --template \"\n",
-    "                             +os.path.join(location_of_template_file,\"latex_nrpy_style.tplx\")\n",
-    "                             +r\" --log-level='WARN' \"+notebookname+\".ipynb\",verbose=False)\n",
-    "        for _i in range(3):  # _i is an unused variable.\n",
-    "            Execute_input_string(r\"pdflatex -interaction=batchmode \"+notebookname+\".tex\",verbose=False)\n",
-    "        delete_existing_files(notebookname+\".out \"+notebookname+\".aux \"+notebookname+\".log\")\n",
-    "        if verbose:\n",
-    "            import textwrap\n",
-    "            wrapper = textwrap.TextWrapper(initial_indent=\"\",subsequent_indent=\"    \",width=75)\n",
-    "            print(wrapper.fill(\"Created \"+notebookname+\".tex, and compiled LaTeX file to PDF file \"+notebookname+\".pdf\"))\n",
-    "    else:\n",
-    "        print(\"Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\")\n"
+    "    Execute_input_string(r\"jupyter nbconvert --to latex --template \"\n",
+    "                         +os.path.join(location_of_template_file,\"latex_nrpy_style.tplx\")\n",
+    "                         +r\" --log-level='WARN' \"+notebookname+\".ipynb\",verbose=False)\n",
+    "    for _i in range(3):  # _i is an unused variable.\n",
+    "        Execute_input_string(r\"pdflatex -interaction=batchmode \"+notebookname+\".tex\",verbose=False)\n",
+    "    delete_existing_files(notebookname+\".out \"+notebookname+\".aux \"+notebookname+\".log\")\n",
+    "    if verbose:\n",
+    "        import textwrap\n",
+    "        wrapper = textwrap.TextWrapper(initial_indent=\"\",subsequent_indent=\"    \",width=75)\n",
+    "        print(wrapper.fill(\"Created \"+notebookname+\".tex, and compiled LaTeX file to PDF file \"+notebookname+\".pdf\"))\n"
    ]
   },
   {
@@ -538,18 +535,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created Tutorial-cmdline_helper.tex, and compiled LaTeX file to PDF file\n",
-      "    Tutorial-cmdline_helper.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-cmdline_helper\")"
@@ -572,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
