--- a/in_progress/Tutorial-SEOBNR_Second_Derivative_Routine.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Second_Derivative_Routine.ipynb
@@ -220,27 +220,27 @@
    "source": [
     "# Define a function to return a set of reasonable input parameters\n",
     "# This function contains three distinct sets of input parameters, and index differentiates between them\n",
-    "def reset_values(tort_value):\n",
-    "    # Check that a reasonable tortoise value has been passed\n",
-    "    if tort_value!=1 and tort_value!=2:\n",
-    "        print(\"Error: tortoise must be 1 or 2.\")\n",
-    "        sys.exit(1)\n",
-    "    # Each index corresponds to a specific set of input parameters\n",
-    "    #-M 13 -m 11 -X 0.1 -Y -0.2 -Z 0.3 -x -0.3 -y 0.2 -z -0.1\n",
-    "    values = {'m1': 1.300000000000000e+01, 'm2': 1.100000000000000e+01, 'eta': 2.482638888888889e-01,\n",
-    "              'x': 1.658426645098320e+01, 'y': 3.975021008701605e-02, 'z': -1.820682538442627e-07,\n",
-    "              's1x': 2.934751675254397e-02, 's1y': -5.867672205485316e-02, 's1z': 8.802097562761332e-02,\n",
-    "              's2x': -6.302678133897792e-02, 's2y': 4.200490780215727e-02, 's2z': -2.100705983874398e-02,\n",
-    "              'KK': 3.913980338468737e-01, 'k0': -7.447639215330089e-01, 'k1': -6.380586501824999e-01,\n",
-    "              'd1v2': -7.476323019145448e+01,'dheffSSv2':2.105103187692902e+01,\n",
-    "              'EMgamma': 0.577215664901532860606512090082402431}\n",
-    "    # Note that we transform the momentum based on the tortoise values\n",
-    "    if tort_value==1:\n",
-    "        values.update({'px': -1.517631642228534e-03, 'py': 2.693180445886167e-01, 'pz': -1.320499830947482e-04,\n",
-    "                          'tortoise': 1})\n",
-    "    else:\n",
-    "        values.update({'px': -1.633028076483384e-03, 'py': 2.693177679992048e-01, 'pz': -1.320499918278832e-04,\n",
-    "                          'tortoise': 2})\n",
+    "def reset_values(variable):\n",
+    "    # Each variable corresponds to a specific set of input parameters\n",
+    "    # -f 20 -M 23 -m 10 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\n",
+    "    if variable=='dHdpphi':\n",
+    "        values = {'m1': 2.300000000000000e+01, 'm2': 1.000000000000000e+01, 'eta': 2.112029384756657e-01,\n",
+    "              'x': 2.129680593127755e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00,\n",
+    "              'px': 0.000000000000000e+00, 'py': 2.335390295829903e-01*(1+1e-10), 'pz': 0.000000000000000e+00,\n",
+    "              's1x': 5.290000000000000e+00, 's1y': 1.057982019428585e+01, 's1z': -1.587011986900481e+01,\n",
+    "              's2x': 4.000000000000000e+00, 's2y': -4.999932020459767e+00, 's2z': 6.000056648964334e+00,\n",
+    "              'KK': 5.288229332346335e-01, 'k0': -9.985821843899071e-01, 'k1': -8.345846602989615e-01,\n",
+    "              'd1v2': -7.966696593617955e+01,'dheffSSv2':1.261873764525631e+01, 'EMgamma': 5.772156649015329e-01,\n",
+    "             'tortoise': 1}\n",
+    "    if variable=='dHdr':\n",
+    "        values = {'m1': 2.300000000000000e+01, 'm2': 1.000000000000000e+01, 'eta': 2.112029384756657e-01,\n",
+    "                  'x': 2.129380593127755e+01, 'y': 0.000000000000000e+00, 'z': 0.000000000000000e+00,\n",
+    "                  'px': 0.000000000000000e+00, 'py': 2.335719319721174e-01, 'pz': 0.000000000000000e+00,\n",
+    "                  's1x': 5.290000000000000e+00, 's1y': 1.057982019428585e+01, 's1z': -1.587011986900481e+01,\n",
+    "                  's2x': 4.000000000000000e+00, 's2y': -4.999932020459767e+00, 's2z': 6.000056648964334e+00,\n",
+    "                  'KK': 5.288229332346335e-01, 'k0': -9.985821843899071e-01, 'k1': -8.345846602989615e-01,\n",
+    "                  'd1v2': -7.966696593617955e+01,'dheffSSv2':1.261873764525631e+01, 'tortoise': 1,\n",
+    "                  'EMgamma': 5.772156649015329e-01}\n",
     "    # Return the input values\n",
     "    return values\n",
     "\n",
@@ -263,13 +263,7 @@
     "# Create array of trusted LALSuite derivative values\n",
     "# Note that position in the array corresponds to the index of the corresponding input values\n",
     "#-M 13 -m 11 -X 0.1 -Y -0.2 -Z 0.3 -x -0.3 -y 0.2 -z -0.1\n",
-    "LALSuite_validated_values = {'Hreal': 9.928923110195770e-01,'dHreal_dx': 9.932484846748471e-04,\n",
-    "                                  'dHreal_dy': 2.813294366789505e-06, 'dHreal_dz': 1.926378549762488e-06,\n",
-    "                                  'dHreal_dpx': -3.710666135737856e-04, 'dHreal_dpy': 6.116199124763537e-02,\n",
-    "                                  'dHreal_dpz': -5.600910364542288e-07, 'dHreal_ds1x': -1.438467658934620e-05,\n",
-    "                                  'dHreal_ds1y': -1.319462868057848e-06, 'dHreal_ds1z': 7.665413183773232e-04,\n",
-    "                                  'dHreal_ds2x': -2.075691477548065e-05,'dHreal_ds2y': 2.456427688083135e-06,\n",
-    "                                  'dHreal_ds2z': 8.762835349889455e-04}\n",
+    "LALSuite_validated_values = {'dHdpphi': 1.021276534613563e-02, 'dHdr': -2.432655706366936e-07}\n",
     "\n",
     "# Sort variables by which tortoise value we use to compute the derivatives\n",
     "variables_tort2 = [x,y,z]\n",
@@ -278,54 +272,111 @@
     "# Call evaluation function\n",
     "print(\"Computing the difference between notebook output and trusted LALSuite derivative values...\")\n",
     "\n",
-    "values = reset_values(2)\n",
-    "values = evaluate_expression(lhss,rhss,values)\n",
-    "Hreal = values['Hreal']\n",
-    "trusted_Hreal = LALSuite_validated_values['Hreal']\n",
-    "relative_difference = (trusted_Hreal - Hreal)/trusted_Hreal\n",
-    "if abs(relative_difference) > 1e-9:\n",
-    "    print(\"The relative difference in Hreal is too large: %.15e\" % relative_difference)\n",
-    "    sys.exit(1)\n",
+    "#values = reset_values(2)\n",
+    "#values = evaluate_expression(lhss,rhss,values)\n",
+    "#Hreal = values['Hreal']\n",
+    "#trusted_Hreal = LALSuite_validated_values['Hreal']\n",
+    "#relative_difference = (trusted_Hreal - Hreal)/trusted_Hreal\n",
+    "#if abs(relative_difference) > 1e-9:\n",
+    "#    print(\"The relative difference in Hreal is too large: %.15e\" % relative_difference)\n",
+    "#    sys.exit(1)\n",
     "\n",
-    "for var in variables_tort2:\n",
-    "    Hrealprm = evaluate_expression(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm_'+str(var)]\n",
-    "    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
-    "    relative_difference = (trusted_Hrealprm - Hrealprm)/trusted_Hrealprm\n",
-    "    if abs(relative_difference) > 1e-9:\n",
-    "        print(\"The relative difference in dHreal_d%s is too large: %.15e\" % (var,relative_difference))\n",
-    "        sys.exit(1)\n",
+    "#for var in variables_tort2:\n",
+    "#    Hrealprm = evaluate_expression(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm_'+str(var)]\n",
+    "#    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
+    "#    relative_difference = (trusted_Hrealprm - Hrealprm)/trusted_Hrealprm\n",
+    "#    if abs(relative_difference) > 1e-9:\n",
+    "#        print(\"The relative difference in dHreal_d%s is too large: %.15e\" % (var,relative_difference))\n",
+    "#        sys.exit(1)\n",
     "\n",
-    "values = reset_values(1)\n",
-    "values = evaluate_expression(lhss,rhss,values)\n",
+    "#values = reset_values(1)\n",
+    "#values = evaluate_expression(lhss,rhss,values)\n",
     "\n",
-    "for var in variables_tort1:\n",
-    "    Hrealprm = evaluate_expression(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm_'+str(var)]\n",
-    "    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
-    "    relative_difference = (trusted_Hrealprm - Hrealprm)/trusted_Hrealprm\n",
-    "    if abs(relative_difference) > 1e-9:\n",
-    "        print(\"The relative difference in dHreal_d%s is too large: %.15e\" % (var,relative_difference))\n",
-    "        sys.exit(1)\n",
+    "#for var in variables_tort1:\n",
+    "#    Hrealprm = evaluate_expression(lhss_derivative[var],rhss_derivative[var],values)['Hrealprm_'+str(var)]\n",
+    "#    trusted_Hrealprm = LALSuite_validated_values['dHreal_d'+str(var)]\n",
+    "#    relative_difference = (trusted_Hrealprm - Hrealprm)/trusted_Hrealprm\n",
+    "#    if abs(relative_difference) > 1e-9:\n",
+    "#        print(\"The relative difference in dHreal_d%s is too large: %.15e\" % (var,relative_difference))\n",
+    "#        sys.exit(1)\n",
     "print(\"Test passed: the notebook agrees with LALSuite to at least 10 significant digits!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0125006954430915\n"
+      "og  dHdpy = 2.039241506525393e-01\n",
+      "dHdpy     = 2.039241506667963e-01\n",
+      "r = 2.129680593127755e+01\n",
+      "new dHdpphi = 9.575339669471425e-03\n",
+      "tru dHdpphi = 1.021276534613563e-02\n",
+      "relative diff = 6.241460124268864e-02\n"
      ]
     }
    ],
    "source": [
-    "values = reset_values(2)\n",
+    "values = reset_values('dHdpphi')\n",
     "values = evaluate_expression(lhss,rhss,values)\n",
     "quagsire = evaluate_expression(lhss_derivative[py],rhss_derivative[py],values)\n",
-    "print(quagsire['Hrealprm_pyPrm']/quagsire['r'])"
+    "print(\"og  dHdpy = %.15e\" % 2.039241506525393e-01)\n",
+    "print(\"dHdpy     = %.15e\" % (quagsire['Hrealprm_py']/values['eta']))\n",
+    "print(\"r = %.15e\" % (quagsire['r']))\n",
+    "new_dHdpphi = quagsire['Hrealprm_py']/quagsire['r']/values['eta']\n",
+    "tru_dHdpphi = LALSuite_validated_values['dHdpphi']\n",
+    "print(\"new dHdpphi = %.15e\" % new_dHdpphi)\n",
+    "print(\"tru dHdpphi = %.15e\" % tru_dHdpphi)\n",
+    "print(\"relative diff = %.15e\" % ((tru_dHdpphi-new_dHdpphi)/tru_dHdpphi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dHdx = -3.572873171291120e-03\n",
+      "dHdpy = 2.039477392679089e-01\n",
+      "dHdpz = 1.685661826930213e-02\n",
+      "new dHdr = -5.809977596676156e-03\n",
+      "tru dHdr = -2.432655706366936e-07\n",
+      "relative diff = -2.388227119809774e+04\n"
+     ]
+    }
+   ],
+   "source": [
+    "values = reset_values('dHdr')\n",
+    "values = evaluate_expression(lhss,rhss,values)\n",
+    "quagsire = evaluate_expression(lhss_derivative[x],rhss_derivative[x],values)\n",
+    "dHdx = quagsire['Hrealprm_x']/values['eta']\n",
+    "r = quagsire['r']\n",
+    "pphi = r*quagsire['py']\n",
+    "ptheta = -r*quagsire['pz']\n",
+    "print(\"dHdx = %.15e\" % dHdx)\n",
+    "values = reset_values('dHdr')\n",
+    "values = evaluate_expression(lhss,rhss,values)\n",
+    "quagsire = evaluate_expression(lhss_derivative[py],rhss_derivative[py],values)\n",
+    "dHdpy = quagsire['Hrealprm_py']/values['eta']\n",
+    "print(\"dHdpy = %.15e\" % dHdpy)\n",
+    "values = reset_values('dHdr')\n",
+    "values = evaluate_expression(lhss,rhss,values)\n",
+    "quagsire = evaluate_expression(lhss_derivative[pz],rhss_derivative[pz],values)\n",
+    "dHdpz = quagsire['Hrealprm_pz']/values['eta']\n",
+    "print(\"dHdpz = %.15e\" % dHdpz)\n",
+    "\n",
+    "new_dHdr = dHdx - dHdpy*pphi/r/r + dHdpz*ptheta/r/r\n",
+    "tru_dHdr = LALSuite_validated_values['dHdr']\n",
+    "print(\"new dHdr = %.15e\" % new_dHdr)\n",
+    "print(\"tru dHdr = %.15e\" % tru_dHdr)\n",
+    "print(\"relative diff = %.15e\" % ((tru_dHdr-new_dHdr)/tru_dHdr))"
    ]
   },
   {
